--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -13,5 +13,5 @@ search = "{current_version}"
 replace = "{new_version}"
 
 [bumpversion:file:package.json]
-search = '"version": "{current_version}"'
-replace = '"version": "{new_version}"'
+search = "{current_version}"
+replace = "{new_version}"
