--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,7 @@ server {
     ssl_certificate_key /etc/ssl/private/local.dataloop.ai.key;
 
     location /insights/dataloop.json {
-        alias /tmp/app/dataloop.json;
+        alias /tmp/app/dataloop_dev.json;
         add_header Access-Control-Allow-Origin *;
     }
 
